Fixed bleeding, shadows and border glitches.
Props @MichaelArestad for the fix.

--- a/client/components/search/style.scss
+++ b/client/components/search/style.scss
@@ -77,6 +77,8 @@
 	.dops-search__input[type="search"] {
 		flex: 1 1 auto;
 		display: flex;
+		margin: 0;
+		box-shadow: none;
 	}
 }
 
